[gd_scene load_steps=2 format=2]

[ext_resource path="res://Entities.gd" type="Script" id=1]

[node name="MainNode" type="Node2D"]

[node name="Entities" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="AliveLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeadsLabel" type="Label" parent="."]
margin_left = 0.707108
margin_top = 17.6777
margin_right = 40.7071
margin_bottom = 31.6777
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="."]
margin_left = 0.353554
margin_top = 28.6378
margin_right = 40.3536
margin_bottom = 42.6378
__meta__ = {
"_edit_use_anchors_": false
}
